# py-code-metrics

./: .gitignore  README.md  anti-spaghetti-research.md  pyproject.toml  test-quality-metrics.md
.cursor/skills/implement-and-reflect/: SKILL.md  reference.md
.cursor/skills/metrics-dogfood-reflect/: SKILL.md  reference.md
.cursor/skills/metrics-guided-implement/: SKILL.md  reference.md
docs/: TODO.md  adoption.md  agent-cli-workflows.md  dataclass-structure-enforcement.md  design-feedback.md  flat-union-dispatch-metrics.md  metrics-iteration-log.md  metrics-suite-hardening.md  metrics.md  module-metrics-research.md
scripts/: compare_self_metrics.py  measure_agent_payloads.py
src/py_code_metrics/: __init__.py  __main__.py  analyze.py  analyze_tests.py  astutil.py  cli.py  compare.py  dashboard.py  discover.py  install_cmd.py  model.py  parse.py  report.py  resolve.py  roles.py  serde.py  views.py
src/py_code_metrics/metrics/: __init__.py  call_graph.py  cohesion.py  complexity.py  dou.py  etspa.py  expression.py  imports.py  module_depth.py  test_coverage.py  test_delta.py  test_mutation.py  test_oracles.py  test_smells.py  test_state_fields.py  test_sut.py  v_poly.py
tests/: test_cli_views.py  test_cohesion.py  test_compare.py  test_complexity.py  test_dashboard.py  test_dou.py  test_e2e.py  test_etspa_expression.py  test_imports.py  test_install.py  test_module_depth.py  test_serde.py  test_test_coverage.py  test_test_mutation.py  test_test_oracles.py  test_test_state_fields.py  test_v_poly.py  test_views.py
tests/fixtures/dashboard_pkg/: mod.py  visitors.py
tests/fixtures/fake_tests/: test_fake_oracles.py
tests/fixtures/module_depth_pkg/: __init__.py  deep_core.py  facade.py  shallow_wide.py
tests/fixtures/sample_pkg/: __init__.py  a.py  b.py  c.py
tests/fixtures/stateful_pkg/: counter.py  test_counter.py
tests/fixtures/sut_pkg/: coverage_no_contexts.json  coverage_with_contexts.json  mutation_cosmic_ray.ndjson  mutation_mutmut_cicd.json  mutation_pcm_v1.json  prod.py  test_prod.py
