[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-code-metrics"
version = "0.1.0"
description = "Anti-spaghetti structural metrics for Python codebases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "py-code-metrics" }]
dependencies = []

[project.scripts]
py-code-metrics = "py_code_metrics.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.12",
    "pyrefly>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py_code_metrics"]

# Ship the adoption skill in the wheel (not dogfood). Author in .cursor/skills/.
[tool.hatch.build.targets.wheel.force-include]
".cursor/skills/metrics-guided-implement" = "py_code_metrics/skill_data/metrics-guided-implement"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["fixtures", ".*", "build", "dist", "*.egg"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["py_code_metrics"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project-includes = ["src", "tests"]
project-excludes = [
    "**/.[!/.]*",
    "**/*venv/**",
    "**/node_modules",
    "**/__pycache__",
    "**/tests/fixtures/**",
]
search-path = ["src"]
python-version = "3.10"

# Scoped local/CI mutation campaigns (optional; not a default dep).
# Example: uv run --with mutmut mutmut run
[tool.mutmut]
source_paths = ["src/py_code_metrics/discover.py"]
pytest_add_cli_args_test_selection = ["tests/test_test_oracles.py"]
also_copy = ["src/py_code_metrics"]
